--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -54,6 +54,14 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" placeholder="Password" id="password" name="password">
           </div>
+          <div class="form-group">
+            <label for="password">Created By</label>
+            <select class="form-control" name="createdby">
+              <% admin.forEach(function(admindata){ %>
+                <option value="<%= admindata._id %>"><%= admindata.name %></option>
+              <% }); %>
+            </select>
+          </div>
           <button type="submit" class="btn btn-success"><i class="fa fa-check"> Save User</i></button>
         </form>
 
