--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
             <td><%= user.name %></td>
             <td><%= user.email %></td>
             <td><%= user.contact %></td>
-            <td>Admin</td>
+            <td><%= user.createdby.name %></td>
             <td>
               <a class="btn btn-info" href="/edituser/<%= user._id %>"><i class="fa fa-pencil"></i> Edit</a>
               <form action="/deleteuser/<%= user._id %>?_method=DELETE" method="post"><button class="btn btn-danger" ><i class="fa fa-trash-o"></i> Delete</button></form>
