Add Logout & Fixed Selection Issue

--- a/public/partials/header.ejs
+++ b/public/partials/header.ejs
@@ -23,6 +23,7 @@
         <ul class="nav pull-left">
           <li class="nav-item">
             <a href="#" class="nav-link">User Management App</a>
+            <%= currentUser %>
           </li>
         </ul>
         <ul class="nav pull-right">
