--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,20 @@
       <div class="col-md-4 offset-md-4">
         <h5>Login to an Administrative Account</h5>
         <div class="row">
+          <% if(typeof succ_msg != 'undefined') { %>
+            <div class="alert alert-success fade in alert-dismissible show" style="margin-top:18px;">
+             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true" style="font-size:20px">×</span>
+              </button>    <strong>Success!</strong> <%= succ_msg %>
+            </div>
+          <% } %>
+          <% if(typeof err_msg != 'undefined') { %>
+            <div class="alert alert-danger fade in alert-dismissible show">
+             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true" style="font-size:20px">×</span>
+              </button>    <strong>Danger!</strong> <%= err_msg %>
+            </div>
+          <% } %>
           <form method="post" action="/authenticateadmin" style="width:100%">
             <div class="form-group">
               <label for="name">Email ID</label>
