--- a/public/partials/header.ejs
+++ b/public/partials/header.ejs
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--styles-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <!--scripts-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <title>User Management App - User List</title>
   </head>
@@ -22,17 +29,27 @@
       <div class="column" style="height:5%;display:flow-root;">
         <ul class="nav pull-left">
           <li class="nav-item">
-            <a href="#" class="nav-link">User Management App</a>
-            <%= currentUser %>
+            <a href="/" class="nav-link" title="Go to User Management Page">User Management App</a>
           </li>
         </ul>
+        <% if(currentUser) {%>
+          <ul class="nav pull-right">
+            <li class="nav-item">
+              <a href="#" class="nav-link"><%= (adminEmail)?adminEmail:'Anonymous Admin'; %></a>
+            </li>
+            <li class="nav-item">
+              <a href="/logout" class="nav-link"><i class="fa fa-sign-out" style="color:black"></i>Logout</a>
+            </li>
+          </ul>
+        <% }else{%>
         <ul class="nav pull-right">
           <li class="nav-item">
-            <a href="#" class="nav-link">Login</a>
+            <a href="/login" class="nav-link">Login</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Register</a>
+            <a href="/register" class="nav-link">Register</a>
           </li>
         </ul>
+        <% } %>
       </div>
     </div>
