--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-    <title>User Management App - Add User </title>
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="column" style="height:5%;display:flow-root;">
-        <ul class="nav pull-left">
-          <li class="nav-item">
-            <a href="#" class="nav-link">User Management App</a>
-          </li>
-        </ul>
-        <ul class="nav pull-right">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Login</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Register</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+<%- include('../public/partials/header'); %>
+<div class="gap" style="height:10vh"></div>
     <div class="container" style="min-height:80vh;">
       <div class="row">
 
@@ -45,6 +16,7 @@
           <div class="form-group">
             <label for="email">Email ID</label>
             <input type="email" class="form-control" name="email" id="email" placeholder="Email ID">
+            <div class="message" style="color:red;position:relative;top:-30px;left:320px;"></div>
           </div>
           <div class="form-group">
             <label for="contact">Contact No.</label>
@@ -62,13 +34,24 @@
               <% }); %>
             </select>
           </div>
-          <button type="submit" class="btn btn-success"><i class="fa fa-check"> Save User</i></button>
+          <button type="submit" class="btn btn-success" id="saveuser"><i class="fa fa-check"> Save User</i></button>
         </form>
 
       </div>
     </div>
-    <footer>
-      <center> &copy User Management App, <%= (new Date()).getFullYear() %></center>
-    </footer>
-  </body>
-</html>
+
+    <script>
+    $('#email').on('focusout',()=>{
+      var email = $('#email').val();
+      $.post('/checkUserEmail', {email:email},(data) => {
+        if(data.count > 0){
+          $('.message').html('<i class="fa fa-times"></i>EmailID Already Registered');
+          $('#saveuser').prop('disabled',true);
+        }else{
+          $('#saveuser').prop('disabled',false);
+        }
+      });
+    });
+    </script>
+
+    <%- include('../public/partials/footer'); %>
