--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <%- include('../public/partials/header'); %>
-    <div class="container" style="min-height:90vh;">
+<div class="gap" style="height:10vh"></div>
+    <div class="container" style="min-height:80vh;">
       <div class="row">
         <a href="/adduser" class="btn btn-primary"> <i class="fa fa-plus"></i> Add User</a>
 
