--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,34 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-  <title>User Management App - User List</title>
-</head>
-<body>
-  <div class="container-fluid">
-    <div class="column" style="height:5%;display:flow-root;">
-      <ul class="nav pull-left">
-        <li class="nav-item">
-          <a href="/" class="nav-link">User Management App</a>
-        </li>
-      </ul>
-      <ul class="nav pull-right">
-        <li class="nav-item">
-          <a href="/login" class="nav-link">Login</a>
-        </li>
-        <li class="nav-item">
-          <a href="/register" class="nav-link">Register</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<%- include('../public/partials/header'); %>
 
   <div class="container">
     <div class="col-md-6 offset-md-3">
@@ -39,4 +9,4 @@
   </div>
 
 </body>
-</html>
+<%- include('../public/partials/footer'); %>
